# wilysearch

./: CLAUDE.md  Cargo.toml  README.md  wilysearch.reference.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: document_tests.rs  search_tests.rs  settings_export_error_tests.rs  system_index_tests.rs
crates/cli/tests/common/: mod.rs
docs/: configuration.md  dependency-reduction-analysis.md  sdk-coverage-design.md  sdk-coverage-requirements.md  sdk-coverage-tasks.md  tool-execution-spec.md  ttrps-endpoint-coverage.md
docs/planning/: WASM_EVALUATION.md
docs/planning/file-store-wasm/: Design.md  Requirements.md  Tasks.md
docs/planning/http-client-wasm/: Design.md  Requirements.md  Tasks.md
docs/planning/meilisearch-types-wasm/: Design.md  Requirements.md  Tasks.md
docs/planning/milli-wasm/: Design.md  Requirements.md  Tasks.md
docs/planning/unified-config/: Design.md  Requirements.md  Tasks.md
examples/: basic_search.rs  hybrid_search.rs  multi_search.rs  preprocessing.rs  preprocessing.toml  settings.rs  synonyms.toml
src/: config.rs  engine.rs  error.rs  lib.rs  traits.rs  types.rs
src/core/: error.rs  index.rs  meilisearch.rs  mod.rs  options.rs  search.rs  settings.rs
src/core/index/: documents.rs  facets_similar.rs  hybrid.rs  mod.rs  search.rs  settings_ops.rs  updates.rs  vectors.rs
src/core/meilisearch/: federation.rs  maintenance.rs  mod.rs
src/core/preprocessing/: config.rs  dictionary.rs  error.rs  fts.rs  mod.rs  synonyms.rs  typo.rs
src/core/preprocessing/defaults/: mod.rs  ttrpg.rs
src/core/rag/: fusion.rs  implementations.rs  mod.rs  pipeline.rs  traits.rs  types.rs
src/core/vector/: mod.rs  surrealdb.rs
src/engine/: conversion.rs  documents.rs  indexes.rs  mod.rs  search.rs  settings.rs  stubs.rs  system.rs
tests/: concurrency_tests.rs  config_tests.rs  document_tests.rs  index_tests.rs  search_tests.rs  settings_tests.rs  vector_sync_tests.rs
tests/common/: mod.rs
