[package]
name = "wilysearch"
version = "0.1.0"
edition = "2024"

[features]
default = []
surrealdb = ["dep:surrealdb", "dep:tokio"]

[dependencies]
# Meilisearch core crates (v1.35.0)
meilisearch-types = { git = "https://github.com/meilisearch/meilisearch", rev = "a1e3c2cb8f99dd6ec9182b9d26927477eef3ef14" }
milli = { git = "https://github.com/meilisearch/meilisearch", rev = "a1e3c2cb8f99dd6ec9182b9d26927477eef3ef14" }
file-store = { git = "https://github.com/meilisearch/meilisearch", rev = "a1e3c2cb8f99dd6ec9182b9d26927477eef3ef14" }
http-client = { git = "https://github.com/meilisearch/meilisearch", rev = "a1e3c2cb8f99dd6ec9182b9d26927477eef3ef14" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Error handling / logging
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"

# Data structures / concurrency
uuid = { version = "1.11", features = ["v4"] }
time = { version = "0.3", features = ["serde-well-known"] }
roaring = "0.10"
crossbeam-channel = "0.5"
rayon = "1.10"
bumpalo = "3.16"
fst = "0.4"

# Query preprocessing
symspell = "0.4"
strsim = "0.11"
unicode-normalization = "0.1"

# ┌──────────────────────────────────────────────────────────────────────────┐
# │ CRITICAL PIN: candle-core/nn/transformers MUST stay at =0.9.1           │
# │                                                                          │
# │ candle 0.9.2 pulls in zip 7.x -> typed-path 0.12, which introduces an  │
# │ ambiguous AsRef impl that breaks milli compilation. This matches the    │
# │ Meilisearch v1.35.0 upstream Cargo.lock. Exact version pins in a        │
# │ library crate are viral -- any downstream crate that needs a different   │
# │ candle version will get a dependency conflict. If upgrading milli,       │
# │ verify candle compatibility first.                                       │
# └──────────────────────────────────────────────────────────────────────────┘
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"

# Optional SurrealDB support
surrealdb = { version = "2.2", features = ["kv-mem", "kv-rocksdb"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

[dev-dependencies]
# Used by RAG implementation tests (block_on for async trait methods)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.15"
figment = { version = "0.10", features = ["toml", "env", "test"] }
