[package]
name = "wily"
version = "0.1.0"
edition = "2024"
description = "CLI wrapper around wilysearch — embedded, HTTP-less Meilisearch"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
wilysearch = { path = "../.." }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
